fix: Corrige le problème d'opacité du cropper

--- a/src/dnm-croppr/src/css/croppr.css
+++ b/src/dnm-croppr/src/css/croppr.css
@@ -45,7 +45,12 @@
   z-index: 2;
   pointer-events: none;
   background-color: white;
-  opacity: 0.5 !important;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) and (min-device-width: 0) {
+  .croppr-imageClipped {
+    opacity: 0.5 !important;
+  }
 }
 
 .croppr-handle {
